# ChangeLog for app-shells/runtitle
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*runtitle-2.0 (06 Sep 2012)

  06 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*runtitle-1.2 (04 Sep 2012)

  04 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*runtitle-1.1 (07 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*runtitle-1.0 (04 May 2012)

  04 May 2012; Martin Väth <martin@mvath.de>
  New ebuild from scratch.