@@ -1,1 +1,1 @@
-DIST runtitle-2.0.tar.gz 3045 SHA256 7a590b64cdf377fc84d4095bbbe527b8e745e60e3501db5ee70aa51ebca24b11 SHA512 8932dc5da5f7ca4f74b5367cdc9ae564b566296149b9cc4f4b347953ae159c413dd696ed7ce3042e16eccddef4e8d937ee8eaf1cdac0d2b2023e4e460acafda3 WHIRLPOOL 0bfe38b2e5b0624a29832a6432e713d567e8b11b1f541e65320348968cb5af87b3bcd3bdd0791feba35defd6f7e2baf94891fa3b184070eadb020ae24f9f72fe
+DIST runtitle-2.2.tar.gz 3074 SHA256 2ede50865a9d842ea7aa6dd41a31547f6cec0f64aeb3f79da3121c69bff49371 SHA512 4f141295c6510f1a250da9d22fa51f52109541f123b5e944dff6fa0131fee538af74bdb00320447c8f7c1ecc45f7bd3dfd5ea4d7134e51df017356520136d276 WHIRLPOOL 7c8085b9574e7e067bcc075ac743405d6a554953a48ac0488de2d70d98eec40140230af02ae24b1fbe79a115cfbda6829c07c561acb9ff5017a99d42f4535882
