@@ -1,1 +1,1 @@
-DIST starter-2.6.tar.gz 6108 RMD160 adf5a555990a20841a0aca03485274436b98dcf6 SHA1 8ddc212251bd81dead9cf2b8a45220a516f05b07 SHA256 73c5395acc02e3767c9fc481e8c4e1b5698f461004afd5650d72011d9f99be59
+DIST starter-2.8.tar.gz 6503 SHA256 573fadcda1767bd72e8376d3b088a20efda3fb7c3f1c8ccb95cf827dfc23b123 SHA512 32388ec2b390f8b5e812f56700200a42146bdf220e789fa4c8b6d577d7c9ad58f9f2d7faa00f4291a494d694858109ddb853a5b09ce5bf76e8c1039bff0edc03 WHIRLPOOL ba7a4c41d07725a6e81d5c90f69feb7c8a0afa4b0359e5f5367235ffb7fbfcbb05272589d2ba6b39605edc2d163fecc7d05b646afa5d2769205e83e1ac9cf3c9
