@@ -13,4 +13,7 @@
 		<bugs-to>mailto:martin@mvath.de</bugs-to>
 		<remote-id type="github">vaeth/starter</remote-id>
 	</upstream>
+	<use>
+		<flag name="title">Support for statusline changes (requires app-shells/runtitle)</flag>
+	</use>
 </pkgmetadata>
