@@ -13,8 +13,9 @@ SRC_URI="http://github.com/vaeth/${PN}/tarball/release-${PV} -> ${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="zsh-completion"
-RDEPEND="app-shells/push"
+IUSE=" +title zsh-completion"
+RDEPEND="app-shells/push
+	title? ( >=app-shells/runtitle-2.0 )"
 DEPEND=""
 
 src_prepare() {
