@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-2.8 (11 Sep 2012)
+
+  11 Sep 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *starter-2.6 (07 May 2012)
 
   12 May 2012; Martin Väth <martin@mvath.de>
