@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*runtitle-2.2 (11 Sep 2012)
+
+  11 Sep 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Rename run->runner to avoid collision
+  with gdb. Thanks to Massimo B. for pointing out this problem.
+
 *runtitle-2.0 (06 Sep 2012)
 
   06 Sep 2012; Martin Väth <martin@mvath.de>
